[metadata]
name = docker2mqtt
version = 2.0.0
author = Cyrill Raccaud
author_email = cyrill.raccaud+pypi@gmail.com
description = Send your docker stats and and events to mqtt and discovery them in home assistant.
long_description = file: README.md, CHANGELOG.md, LICENCE
long_description_content_type = text/markdown
license_files = LICENSE
keywords = 
  mqtt
  paho
  docker
  metrics
url = https://github.com/miaucl/docker2mqtt
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Information Technology
    Topic :: System :: Monitoring
    Topic :: System :: Logging
    Topic :: System :: Systems Administration

[project.urls]
Documentation = "https://miaucl.github.io/docker2mqtt/"
Source = "https://github.com/miaucl/docker2mqtt"
Issues = "https://github.com/miaucl/docker2mqtt/issues"


[options]
packages = 
    docker2mqtt
python_requires = >=3.11
install_requires =
    paho-mqtt
include_package_data = True

[options.package_data]
docker2mqtt = py.typed

[options.entry_points]
console_scripts =
  docker2mqtt = docker2mqtt.docker2mqtt:main